# pic-qpc

./: .gitignore  CONTRIBUTING.md  EXAM_PRESENTATION.md  EXAM_SUBMISSION.md  EXAM_SUMMARY.md  LICENSE  PR_DESCRIPTION.md  README.md  pyproject.toml  setup_github.sh  verify_setup.py
.github/workflows/: ci.yml
docs/: design.md  experiments.md  math.md
examples/: analytic_sanity.py  train_synth.py  train_uci.py
pic/: __init__.py  compile.py  conditionals.py  evaluate.py  leaves.py  nodes.py  quadrature.py  structures.py  utils.py
tests/: __init__.py  test_conditionals.py  test_quadrature.py  test_structures.py
